--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1174,3 +1174,448 @@ body .main-body .page-body .welcome-widget {
     margin: 0px 5px;
     border-radius: 6px;   
 }
+/*jobs section ---- End */
+
+/* Universities section ---- Start */
+.universities-section .heading {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.universities-filter-section {
+    padding: 24px 30px;
+    background-color: #253AA3;
+    margin-top: 12px;
+    border-radius: 6px;
+}
+.universities-filter-section .filter-input-container {
+    flex: 1;
+}
+
+.universities-filter-section .filter-input-container .search-univ {
+    font-size: .800rem;
+    margin-bottom: 12px;
+}
+
+.universities-filter-section .filter-input-container .drop-down-inputs-container .select-filter {
+    font-size: .800rem;
+    margin: 0px 6px;
+}
+
+.universities-filter-section .filter-input-container .drop-down-inputs-container .select-filter:first-child {
+    margin-left: 0px;
+}
+
+.universities-filter-section .filter-input-container .drop-down-inputs-container .select-filter:last-child {
+    margin-right: 0px;
+}
+
+.universities-filter-section .filter-input-container .drop-down-inputs-container .dividerWord {
+    margin: 0px 6px;
+    font-size: .750rem;
+    color: white;
+}
+
+.universities-filter-section .filter-search-btn-container .univ-search-btn {
+    border-radius: 4px;
+    padding: 10px 50px;
+    background-color: #20BDC9;
+    color: white;
+    font-size: .800rem;
+    margin: 0px 0px 0px 40px;
+}
+.universities-filter-section .filter-search-btn-container .univ-search-btn p {
+    margin-right: 20px;
+}
+
+.universities-list-container .heading {
+    font-size: 1.2rem;
+    color:rgb(124, 124, 124);
+    font-weight: 500;
+    margin-bottom: 14px;
+}
+
+.universities-list-container .filter-chips-list .filter-chip {
+    font-size: .500rem;
+    background-color: #5473E8;
+    border-radius: 6px;
+    color: white;
+    padding: 2px;
+    margin: 0px 3px;
+}
+
+.universities-list-container .filter-chips-list .filter-chip p {
+    padding: 0px 8px;
+}
+
+.universities-list-container .filter-chips-list .filter-chip .fas {
+    padding: 0px 4px;
+}
+
+.university-item {
+    padding: 18px 24px;
+    background-color: white;
+    border: 1px solid rgb(197, 196, 196);
+    border-radius: 6px;
+    margin-bottom: 14px;
+}
+
+.university-item .univ-item-container {
+    width: 400px;
+}
+
+.university-item .univ-item-container .univ-icon {
+    padding: 8px;
+    border: 1px solid rgb(172, 172, 172);
+    border-radius: 6px;
+    margin-right: 16px;
+}
+
+.university-item .univ-item-container .univ-icon i {
+    font-size: 2rem;
+    color: rgb(230, 230, 230);
+}
+
+.university-item .univ-item-container .univ-basic-info .title{
+    font-size: .800rem;
+    color: black;
+    margin-bottom: 3px;
+}
+
+.university-item .univ-item-container .univ-basic-info .sub-title {
+    font-size: .700rem;
+    color: grey;
+}
+
+.university-item .univ-info-item .title {
+    font-size: .600rem;
+    color: grey;
+    margin-bottom: 3px;
+}
+
+.university-item .univ-info-item .sub-title {
+    font-size: .700rem;
+    color: black;
+}
+
+.vertical-divider-2 {
+    width: 1px;
+    background-color: #e0e0e0;
+    min-height: 50px;
+    max-height: 50px;
+}
+
+.university-item .univ-view-more-btn {
+    border-radius: 4px;
+    background-color: #253AA3;
+    padding: 6px 20px;
+    color: white;
+    font-size: .800rem;
+}
+/* Universities section ---- End */
+
+/* Single University ---- Start */
+.single-university-section .header .backBtn {
+    border-radius: 4px;
+    border: 1px solid grey;
+    padding: 3px 10px;
+    font-size: .900rem;
+}
+
+.single-university-section .header .backBtn .btnLabel {
+    margin-left: 15px;
+}
+
+.single-university-section .header .title-container {
+    margin-left: 350px;
+}
+
+.single-university-section .header .title-container .title {
+    text-align: center;
+    font-size: 1.4rem;
+    color: grey;
+    font-weight: 500;
+}
+
+.single-university-section .university-info-widget {
+    border-radius: 4px;
+    border: 1px solid grey;
+    overflow: hidden;
+    margin-top: 20px;
+    background-color: white;
+}
+
+.single-university-section .university-info-widget .university-info-plain-stripe {
+    height: 60px;
+    background-color: #253AA3;
+}
+
+.single-university-section .university-info-widget .univ-info .univ-header {
+    margin: 0px 0px 0px 30px;
+}
+
+.single-university-section .university-info-widget .univ-info .univ-verticle-border {
+    width: 1px;
+    background-color: #9e9e9e;
+    min-height: 135px;
+    max-height: 135px;
+}
+
+.single-university-section .university-info-widget .univ-info .univ-header .univ-logo {
+    width: 100px;
+    height: 100px;
+    border-radius: 8px;
+    margin-top: -30px;
+    overflow: hidden;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-header .univ-header-name {
+    padding: 14px;
+    margin-right: 30px;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-header .univ-header-name .title {
+    font-weight: 500;
+    color: black;
+    font-size: 1.4rem;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-header .univ-header-name .sub-title {
+    font-weight: 400;
+    color: grey;
+    font-size: .900rem;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget{
+    flex: 1;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-info-data-list .univ-info-data {
+    padding: 20px;
+    flex: 1;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-info-data-list .univ-verticle-border-3 {
+    width: 1px;
+    background-color: #9e9e9e;
+    min-height: 90px;
+    max-height: 90px;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-info-data-list .univ-info-data .title {
+    color: grey;
+    font-size: .800rem;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-info-data-list .univ-info-data .sub-title {
+    font-size: .950rem;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-course-stripe {
+    padding: 20px 0px;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-course-stripe .title {
+    padding-left: 50px;
+    font-size: .800rem;
+    color: grey;
+}
+
+.single-university-section .university-info-widget .univ-info  .univ-info-widget .univ-course-stripe .sub-title {
+    padding-left: 50px;
+    font-size: .900rem;
+}
+
+.single-university-section .univ-profile-container {
+    border-radius: 6px;
+    overflow: hidden;
+    margin-top: 20px;
+    border: 1px solid grey;
+    background-color: white;
+}
+
+.single-university-section .univ-profile-container .profile-bar {
+    background-color: #253AA3;
+    width: 120px;
+    height: 100%;
+}
+
+.single-university-section .univ-profile-container .univ-profile {
+    padding: 20px 20px 20px 40px;
+    border-left: none;
+}
+
+.single-university-section .univ-profile-container .univ-profile .title {
+    font-size: .950rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.single-university-section .univ-profile-container .univ-profile .sub-title {
+    font-size: .800rem;
+    color: grey;
+}
+
+.single-university-section .univ-quick-widgets-container {
+    margin-top: 20px;
+}
+
+.single-university-section .univ-quick-widgets-container .univ-quick-widget {
+    width: 30%;
+    flex: 1;
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 6px;
+    overflow: hidden;
+}
+
+.single-university-section .univ-quick-widgets-container .univ-quick-widget:nth-child(2) {
+    margin: 0px 30px;
+}
+
+.single-university-section .univ-quick-widgets-container .univ-quick-widget .fas {
+    color: #253AA3;
+    font-size: 3rem;
+    padding-top: 20px;
+}
+
+.single-university-section .univ-quick-widgets-container .univ-quick-widget .title {
+    text-transform: uppercase;
+    font-size: 1.2rem;
+    padding: 10px 0px 20px 0px;
+    font-weight: bold;
+}
+
+.single-university-section .univ-quick-widgets-container .univ-quick-widget .quick-widget-btn {
+    background-color: #253AA3;
+    padding: 10px;
+    color: white;
+    width: 100%;
+    text-align: center;
+}
+
+.single-university-section .univ-subscription-history-stripe {
+    background-color: #CDD0DE;
+    width: 100%;
+    margin-top: 20px;
+}
+
+.single-university-section .univ-subscription-history-stripe .label {
+    padding: 12px 0px;
+    font-size: 1rem;
+    color: black;
+    text-align: center;
+}
+.single-university-section .univ-subscription-list-container {
+    margin-top: 20px;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item {
+    background-color: white;
+    border: 1px solid grey;
+    border-radius: 4px;
+    width: 100%;
+    padding: 20px 24px;
+    margin-bottom: 20px;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .sub-type-container {
+    width: 30%
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .sub-type-container .icon {
+    color: #253AA3;
+    font-size: 1.8rem;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .sub-type-container .sub-label {
+    font-size: 1rem;
+    margin-left: 30px;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .name-address .title {
+    font-size: .800rem;   
+    margin-bottom: 3px;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .name-address .sub-title {
+    font-size: .700rem;
+    color: grey;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .sub-item-container .title {
+    font-size: .600rem;
+    color: grey;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .sub-item-container .sub-title {
+    font-size: .700rem;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .view-info-btn {
+    padding: 5px 20px;
+    font-size: .750rem;
+    background-color: #253AA3;
+    color: white;
+    text-align: center;
+    border-radius: 4px;
+}
+
+.single-university-section .univ-subscription-list-container .univ-sub-item .vertical-border {
+    width: 1px;
+    background-color: #d8d8d8;
+    min-height: 60px;
+    max-height: 60px;
+}
+
+.single-university-section .filter-heading .label {
+    text-align: center;
+    font-size: 1rem;
+    color: grey;
+    margin-top: 20px;
+    font-weight: 500;
+}
+
+.single-university-section .search-filter-container {
+    padding: 20px 30px;
+    background-color: #253AA3;
+    border-radius: 4px;
+}
+
+.single-university-section .search-filter-container .item {
+    flex: 1;
+}
+
+.single-university-section .search-filter-container .form-control {
+    font-size: .850rem;
+}
+
+.single-university-section .search-filter-container .item:nth-child(3) {
+    flex: 2;
+}
+
+.single-university-section .search-filter-container .dividerWord {
+    color: white;
+    font-size: .900rem;
+    margin: 0px 20px;
+}
+
+.single-university-section .search-filter-container .students-list-btn {
+    text-align: center;
+    padding: 10px 10px;
+    color: white;
+    font-size: .850rem;
+    background-color: #20BDC9;
+    border-radius: 4px;
+    margin-left: 20px;
+}
+
+.single-university-section .search-filter-container {
+    margin-top: 20px;
+}
+
+.single-university-section .search-filter-container .four-filters .form-control {
+    margin: 10px;
+    font-size: .850rem;
+}
+/* Single University ---- End */
