--- a/c2hire/style.css
+++ b/c2hire/style.css
@@ -3,8 +3,9 @@ p {
 }
 
 body {
-  background-color: #f7f8fc;
+  background-color: #f8f9fd;
   overflow-x: hidden;
+  /* width */
 }
 
 .navbar {
@@ -18,6 +19,19 @@ body {
   color: #ffffff;
 }
 
+.navbar .nav-item {
+  margin-right: 5px;
+}
+
+.navbar .nav-item:hover {
+  background-color: #ffffff;
+  border-radius: 5px;
+}
+
+.navbar .nav-item:hover .nav-link {
+  color: #253aa3;
+}
+
 .navbar .nav-item .nav-link {
   color: #ffffff;
 }
@@ -26,10 +40,45 @@ body {
   cursor: pointer;
 }
 
+.navbar .nav-item .dropdown .dropdown-menu {
+  border: 1px solid #d3d3d3;
+  -webkit-box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+          box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+}
+
+.navbar .nav-item .dropdown .dropdown-menu a:hover {
+  background-color: #253aa3;
+  color: #ffffff;
+}
+
 .navbar .navbar-nav {
   position: absolute;
-  bottom: 0;
+  bottom: 5px;
   right: 0;
+}
+
+.page-body {
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+}
+
+.landing-bg-img1 {
+  position: absolute;
+  left: 32%;
+  top: 55px;
+  opacity: 0.8;
+}
+
+.landing-bg-img2 {
+  position: absolute;
+  right: -15px;
+  opacity: 0.8;
+  top: 84px;
+}
+
+.ellipse-square {
+  position: absolute;
+  left: 30px;
 }
 
 .btn {
@@ -58,11 +107,18 @@ body {
 
 .message-btn {
   font-size: 0.9rem;
+  background: #ffffff;
+  color: #253aa3;
   outline: none;
   border: none;
+  font-weight: 500;
   padding: 14px 20px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+}
+
+.message-btn:hover {
+  color: #253aa3;
 }
 
 .form-btns {
@@ -82,8 +138,11 @@ body {
 }
 
 .img-cycle-prop .collab {
-  width: 220px;
+  width: 260px;
+  font-weight: 500;
+  color: #253aa3;
   margin: 1.5rem;
+  opacity: 0.8;
   border-bottom: 30px solid #eceff8;
   line-height: 1;
   font-size: 2.3rem;
@@ -91,16 +150,24 @@ body {
 
 .img-cycle-prop .list {
   background-color: #eceff8;
-  padding: 20px;
-  float: left;
+  padding: 20px 5px;
 }
 
 .img-cycle-prop .list ul li {
-  font-size: 1.2rem;
+  font-size: 1rem;
 }
 
 .img-cycle-prop .cycle-img {
-  padding: 1rem;
+  padding: 1rem 1rem 0 0;
+  position: relative;
+}
+
+.img-cycle-prop .cycle-img img {
+  border: 1px solid #d3d3d3;
+  border-top: 0;
+  border-left: 0;
+  position: absolute;
+  bottom: 0;
 }
 
 .reviewComments {
@@ -175,6 +242,7 @@ body {
 
 .CUS_Stats-block {
   margin-bottom: 5rem;
+  padding: 0 5rem;
 }
 
 .CUS_Stats-block .stat-info-widget {
@@ -240,7 +308,7 @@ body {
 }
 
 .Stats {
-  padding: 0 9rem;
+  padding: 0 6rem;
 }
 
 .Stats .stat-widget {
@@ -272,12 +340,14 @@ body {
 
 .Stats .stat-widget .stat-content {
   margin-left: 20px;
+  height: 100%;
   color: white;
   text-transform: uppercase;
 }
 
 .Stats .stat-widget .stat-content .title {
   font-size: 0.8rem;
+  padding: 5px 0;
 }
 
 .Stats .stat-widget .stat-content .sub-title {
@@ -334,27 +404,74 @@ body {
   text-align: center;
 }
 
+.policy-terms {
+  padding: 0 103px;
+  color: #000000;
+}
+
+.policy-terms hr {
+  width: 80px;
+}
+
+.policy-terms .policy-heading h1 {
+  text-align: center;
+  font-weight: 600;
+  color: #253aa3;
+}
+
+.policy-terms .policy-paragraphs p {
+  font-size: 20px;
+  margin-bottom: 15px;
+}
+
+.policy-terms .policy-paragraphs .policy-listings {
+  padding-right: 20px;
+}
+
+.policy-terms .policy-paragraphs label {
+  font-size: 22px;
+  margin: 0;
+  font-weight: 600;
+}
+
+.policy-terms .policy-paragraphs ul li {
+  padding: 5px 0;
+}
+
+.policy-terms .policy-paragraphs ol {
+  font-size: 18px;
+}
+
+.policy-terms .terms-para p,
+.policy-terms .discl {
+  margin-bottom: 2rem;
+}
+
+.policy-terms .padspacing {
+  padding: 0 20px;
+}
+
 .footer-block {
   padding: 1px;
-  background-color: #ffffff;
+  background-color: #253aa3;
 }
 
 .footer-block .address-details h1 {
-  color: #253aa3;
+  color: #ffffff;
   font-size: 3rem;
 }
 
 .footer-block .address-details p {
-  opacity: 0.66;
-  color: #000000;
+  opacity: 0.8;
+  color: #ffffff;
 }
 
 .footer-block .copyright-text {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  color: #000000;
-  opacity: 0.66;
+  color: #ffffff;
+  opacity: 0.8;
   -webkit-box-align: end;
       -ms-flex-align: end;
           align-items: flex-end;
@@ -363,36 +480,24 @@ body {
 .footer-block .socials {
   display: block;
   width: 100%;
-  color: #000000;
-  opacity: 0.66;
+  color: #ffffff;
+  opacity: 0.8;
+}
+
+.footer-block .policy-links {
+  display: block;
+  color: #ffffff;
 }
 
 .footer-block .policy-links a {
   text-decoration: none;
   width: 100%;
-  color: #000000;
+  color: #ffffff;
   opacity: 0.8;
 }
 
-
-.policy-heading h1 {
-    text-align: center;
-    font-weight: 600;
-    color: rgb(6,84,128);
-  }
-
-
-.policy-paragraphs p{
-  font-size: 20px;  
-  margin-bottom: 30px;
-} 
-  .policy-paragraphs p label {
-    font-size: 22px;
-    font-weight: 600;
-}
-
-.padspacing {
-  padding-left: 3rem !important;
-  padding-right: 3rem !important;
+.footer-block .policy-links a:hover {
+  opacity: 1;
+  border-bottom: 1px solid #ffffff;
 }
 /*# sourceMappingURL=style.css.map */
