--- a/c2hire/style.scss
+++ b/c2hire/style.scss
@@ -1,10 +1,13 @@
+//color variable
 $Primary-Color: #253aa3;
+
 p {
   margin: 0;
 }
 body {
-  background-color: #f7f8fc;
+  background-color: #f8f9fd;
   overflow-x: hidden;
+  /* width */
 }
 .navbar {
   position: relative;
@@ -15,18 +18,57 @@ body {
     color: #ffffff;
   }
   .nav-item {
+    margin-right: 5px;
+    &:hover {
+      background-color: #ffffff;
+      border-radius: 5px;
+      .nav-link {
+        color: $Primary-Color;
+      }
+    }
     .nav-link {
       color: #ffffff;
     }
     .dropdown {
       cursor: pointer;
+      .dropdown-menu {
+        border: 1px solid #d3d3d3;
+        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
+          0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
+        a {
+          &:hover {
+            background-color: $Primary-Color;
+            color: #ffffff;
+          }
+        }
+      }
     }
   }
   .navbar-nav {
     position: absolute;
-    bottom: 0;
+    bottom: 5px;
     right: 0;
   }
+}
+.page-body {
+  margin-top: 3rem;
+  margin-bottom: 5rem;
+}
+.landing-bg-img1 {
+  position: absolute;
+  left: 32%;
+  top: 55px;
+  opacity: 0.8;
+}
+.landing-bg-img2 {
+  position: absolute;
+  right: -15px;
+  opacity: 0.8;
+  top: 84px;
+}
+.ellipse-square {
+  position: absolute;
+  left: 30px;
 }
 //buttons starts
 .btn {
@@ -50,11 +92,17 @@ body {
 }
 .message-btn {
   font-size: 0.9rem;
+  background: #ffffff;
+  color: $Primary-Color;
   outline: none;
   border: none;
+  font-weight: 500;
   padding: 14px 20px;
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
+  &:hover {
+    color: $Primary-Color;
+  }
 }
 .form-btns {
   background-color: #ffffff;
@@ -72,22 +120,32 @@ body {
 //buttons ends
 .img-cycle-prop {
   .collab {
-    width: 220px;
+    width: 260px;
+    font-weight: 500;
+    color: $Primary-Color;
     margin: 1.5rem;
+    opacity: 0.8;
     border-bottom: 30px solid #eceff8;
     line-height: 1;
     font-size: 2.3rem;
   }
   .list {
     background-color: #eceff8;
-    padding: 20px;
-    float: left;
+    padding: 20px 5px;
     ul li {
-      font-size: 1.2rem;
+      font-size: 1rem;
     }
   }
   .cycle-img {
-    padding: 1rem;
+    padding: 1rem 1rem 0 0;
+    position: relative;
+    img {
+      border: 1px solid #d3d3d3;
+      border-top: 0;
+      border-left: 0;
+      position: absolute;
+      bottom: 0;
+    }
   }
 }
 .reviewComments {
@@ -153,6 +211,7 @@ body {
 
 .CUS_Stats-block {
   margin-bottom: 5rem;
+  padding: 0 5rem;
   .stat-info-widget {
     width: 100%;
     margin-bottom: 1rem;
@@ -210,7 +269,7 @@ body {
   text-transform: uppercase;
 }
 .Stats {
-  padding: 0 9rem;
+  padding: 0 6rem;
   .stat-widget {
     padding: 5px 10px;
     margin-bottom: 1rem;
@@ -235,10 +294,12 @@ body {
     }
     .stat-content {
       margin-left: 20px;
+      height: 100%;
       color: white;
       text-transform: uppercase;
       .title {
         font-size: 0.8rem;
+        padding: 5px 0;
       }
       .sub-title {
         font-size: 0.8rem;
@@ -290,36 +351,84 @@ body {
     }
   }
 }
+.policy-terms {
+  padding: 0 103px;
+  color: #000000;
+  hr {
+    width: 80px;
+  }
+  .policy-heading h1 {
+    text-align: center;
+    font-weight: 600;
+    color: $Primary-Color;
+  }
+  .policy-paragraphs {
+    p {
+      font-size: 20px;
+      margin-bottom: 15px;
+    }
+    .policy-listings {
+      padding-right: 20px;
+    }
+    label {
+      font-size: 22px;
+      margin: 0;
+      font-weight: 600;
+    }
+    ul li {
+      padding: 5px 0;
+    }
+    ol {
+      font-size: 18px;
+    }
+  }
+  .terms-para p,
+  .discl {
+    margin-bottom: 2rem;
+  }
+
+  .padspacing {
+    padding: 0 20px;
+  }
+}
 
 .footer-block {
   padding: 1px;
-  background-color: #ffffff;
+  background-color: $Primary-Color;
   .address-details {
     h1 {
-      color: $Primary-Color;
+      color: #ffffff;
       font-size: 3rem;
     }
     p {
-      opacity: 0.66;
-      color: #000000;
+      opacity: 0.8;
+      color: #ffffff;
     }
   }
   .copyright-text {
     display: flex;
-    color: #000000;
-    opacity: 0.66;
+    color: #ffffff;
+    opacity: 0.8;
     align-items: flex-end;
   }
   .socials {
     display: block;
     width: 100%;
-    color: #000000;
-    opacity: 0.66;
-  }
-  .policy-links a {
-    text-decoration: none;
-    width: 100%;
-    color: #000000;
+    color: #ffffff;
     opacity: 0.8;
+  }
+  .policy-links {
+    display: block;
+    color: #ffffff;
+    a {
+      text-decoration: none;
+      width: 100%;
+      color: #ffffff;
+      opacity: 0.8;
+      &:hover {
+        opacity: 1;
+        border-bottom: 1px solid #ffffff;
+      }
+    }
   }
 }
